# MinecraftStream

./: CMakeLists.txt
include/: camera.hpp  chunk.hpp  crosshair.hpp  engine.hpp  mesh.hpp  object.hpp  objloader.hpp  shader.hpp  texture.hpp  vertex.hpp  window.hpp  world.hpp
include/math/: matrix44.hpp  vector3.hpp  vector4.hpp  vector_math.hpp
models/: complicated.mtl
savedata/: chunk00.txt  chunk02.txt
shaders/: gui_shader_fragment.glsl  gui_shader_vertex.glsl  mesh_shader_fragment.glsl  mesh_shader_vertex.glsl  triangle_fragment.glsl  triangle_vertex.glsl
src/: camera.cpp  chunk.cpp  crosshair.cpp  main.cpp  mesh.cpp  object.cpp  shader.cpp  texture.cpp  vertex.cpp  window.cpp
src/pre-optimal/: mesh.cpp  object.cpp
